# GUPPI

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.agentheim/: context-map.md  vision.md
.agentheim/contexts/agent-awareness/: INDEX.md  README.md
.agentheim/contexts/canvas/: INDEX.md  README.md
.agentheim/contexts/canvas/backlog/: canvas-003-focus-zoom.md  canvas-004-styleguide-visuals.md  canvas-005-project-discovery-affordances.md
.agentheim/contexts/canvas/done/: canvas-001-targeted-canvas-updates.md  canvas-002-render-multiple-project-tiles.md  canvas-005a-single-shot-discovery-affordances.md  canvas-005b-scan-flow-and-scan-root-management.md  canvas-006-live-add-race-on-concurrent-project-added.md
.agentheim/contexts/canvas/todo/: canvas-002-render-multiple-project-tiles.md
.agentheim/contexts/claude-runner/: INDEX.md  README.md
.agentheim/contexts/design-system/: INDEX.md  README.md  STYLEGUIDE.md
.agentheim/contexts/design-system/done/: design-system-001-styleguide.md
.agentheim/contexts/design-system/todo/: design-system-001-styleguide.md
.agentheim/contexts/infrastructure/: INDEX.md  README.md  voice-bridge.md
.agentheim/contexts/infrastructure/backlog/: infrastructure-013-pty-spike.md  infrastructure-014-fine-grained-fs-events.md  infrastructure-015-log-retention-sweep.md  infrastructure-016-readme-resync-required-rename.md
.agentheim/contexts/infrastructure/done/: infrastructure-001-desktop-runtime.md  infrastructure-002-frontend-framework.md  infrastructure-003-canvas-rendering.md  infrastructure-004-persistence.md  infrastructure-005-project-discovery.md  infrastructure-006-claude-pty.md  infrastructure-007-voice-integration.md  infrastructure-008-filesystem-observation.md  infrastructure-009-event-bus.md  infrastructure-010-logging.md  infrastructure-011-packaging.md  infrastructure-012-walking-skeleton.md  infrastructure-013-pty-spike.md  infrastructure-014-fine-grained-fs-events.md  (+2 more)
.agentheim/contexts/project-registry/: INDEX.md  README.md
.agentheim/contexts/voice/: INDEX.md  README.md
.agentheim/knowledge/: index.md  protocol.md
.agentheim/knowledge/decisions/: ADR-001-desktop-runtime.md  ADR-002-frontend-framework.md  ADR-003-canvas-rendering.md  ADR-004-persistence.md  ADR-005-project-discovery.md  ADR-006-claude-pty.md  ADR-007-voice-integration.md  ADR-008-filesystem-observation.md  ADR-009-event-bus.md  ADR-010-logging.md  ADR-011-packaging.md  ADR-012-pty-session-teardown-ordering.md  ADR-013-scan-roots.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  events.rs  lib.rs  logging.rs  main.rs  project.rs  pty.rs  scan.rs  supervisor.rs  watcher.rs
src/lib/: Canvas.svelte  Modal.svelte  camera.svelte.ts  ipc.ts  snapshot-patch.ts  tile-layout.ts  types.ts
src/lib/design/: tokens.css  tokens.ts
src/routes/: +layout.ts  +page.svelte
(+19 files in other folders)
