[package]
name = "guppi"
version = "0.1.0"
description = "GUPPI — the canvas over your Agentheim projects"
authors = ["Marco Heimeshoff"]
edition = "2021"
rust-version = "1.77"

# The library powers the Tauri app; main.rs is a thin shell over it.
[lib]
name = "guppi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
notify-debouncer-full = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
