[package]
name = "guppi"
version = "0.1.0"
description = "GUPPI — the canvas over your Agentheim projects"
authors = ["Marco Heimeshoff"]
edition = "2021"
rust-version = "1.77"

# The library powers the Tauri app; main.rs is a thin shell over it.
[lib]
name = "guppi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# ADR-005 / canvas-005a: the "Add project…" affordance opens a native folder
# picker. The dialog plugin is wired here on the Rust side; the matching
# frontend wrapper is `@tauri-apps/plugin-dialog`, capability granted in
# `capabilities/default.json`.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
notify-debouncer-full = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
# ADR-004 / ADR-010: cross-platform OS config dir (Windows `%APPDATA%`, macOS
# `~/Library/Application Support`, Linux `~/.config`). Used to anchor GUPPI's
# state under `<config>/guppi/` instead of Tauri's identifier-derived path.
dirs = "5"
# ADR-006: PTY/session ownership. `portable-pty` wraps ConPTY on Windows.
portable-pty = "0.8"

# ADR-006: Windows Job Object for orphan-free process-tree cleanup. Windows-only.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
